--- a/StoredProcTARge23/Views/Employee/Index.cshtml
+++ b/StoredProcTARge23/Views/Employee/Index.cshtml
@@ -1,2 +1,5 @@
-﻿
-Employee index
+﻿<li>
+	<a class="btn btn-danger" asp-controller="Employee" asp-action="SearchResult">SearchResults</a>
+</li>
+<hr />
+
