--- a/StoredProcTARge23/Views/Employee/Index.cshtml
+++ b/StoredProcTARge23/Views/Employee/Index.cshtml
@@ -2,4 +2,12 @@
 	<a class="btn btn-danger" asp-controller="Employee" asp-action="SearchResult">SearchResults</a>
 </li>
 <hr />
+<li>
+	<a class="btn btn-danger" asp-controller="Employee" asp-action="DynamicSQL">DynamicSQL</a>
+</li>
+<hr />
+<li>
+	<a class="btn btn-danger" asp-controller="Employee" asp-action="DynamicSQLinStoredProcedure">Dynamic SQL in Stored Procedure</a>
+</li>
+
 
